RESOLVED FIXED315419
REGRESSION(310113@main): On ChatGPT, typing a long text in Japanese IM results in a partially confirmed composition to be displaced after the caret
https://bugs.webkit.org/show_bug.cgi?id=315419
Summary REGRESSION(310113@main): On ChatGPT, typing a long text in Japanese IM result...
Ryosuke Niwa
Reported 2026-05-23 04:44:29 PDT
When typing a long sentence in ChatGPT using Japanese input methods, partially confirmed text moves to after the current composition. <rdar://177691343>
Attachments
Ryosuke Niwa
Comment 1 2026-05-23 04:51:57 PDT
EWS
Comment 2 2026-05-24 00:00:34 PDT
Committed 313806@main (2e47ba3f800b): <https://commits.webkit.org/313806@main> Reviewed commits have been landed. Closing PR #65532 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.